Add support for internalTrafficPolicy
